[gd_scene load_steps=12 format=2]

[ext_resource path="res://KinematicBody2D.gd" type="Script" id=1]
[ext_resource path="res://art/abstract-platformer-370-assets/PNG/Enemies/enemySwimming_4.png" type="Texture" id=2]
[ext_resource path="res://art/abstract-platformer-370-assets/PNG/Enemies/enemySwimming_3.png" type="Texture" id=3]
[ext_resource path="res://art/abstract-platformer-370-assets/PNG/Enemies/enemySwimming_1.png" type="Texture" id=4]
[ext_resource path="res://art/abstract-platformer-370-assets/PNG/Enemies/enemySwimming_2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.2386, 11.919 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "stunned",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13.5898, 1.42667 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2.34797, 11.3195 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 2.19808, 10.2702 )

[sub_resource type="CapsuleShape2D" id=6]
radius = 14.8367

[node name="Ground Enemy 4" type="KinematicBody2D"]
position = Vector2( 29.9694, 22.8176 )
script = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -4.76776, -33.375 )

[node name="BodyCol" type="CollisionShape2D" parent="."]
position = Vector2( -5.09628, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -4.64661, -0.37473 )
scale = Vector2( 0.645713, 0.742375 )
frames = SubResource( 2 )
animation = "stunned"

[node name="StompDetector" type="Area2D" parent="."]
position = Vector2( -5.84573, -15.2889 )

[node name="TopCol" type="CollisionShape2D" parent="StompDetector"]
modulate = Color( 0.0784314, 0.0196078, 0.47451, 1 )
position = Vector2( 0.299789, 0 )
shape = SubResource( 3 )

[node name="KillDetector" type="Area2D" parent="."]
position = Vector2( -5.69584, -15.5886 )

[node name="LeftCol" type="CollisionShape2D" parent="KillDetector"]
modulate = Color( 0.00784314, 0.419608, 0.0705882, 1 )
position = Vector2( -18.1368, 15.7385 )
shape = SubResource( 4 )

[node name="RightCol" type="CollisionShape2D" parent="KillDetector"]
modulate = Color( 0.00784314, 0.427451, 0.101961, 1 )
position = Vector2( 19.7856, 14.9891 )
shape = SubResource( 5 )

[node name="Body" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="FireballCol" type="CollisionShape2D" parent="Body"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -5.44899, -0.681122 )
rotation = 1.5708
shape = SubResource( 6 )
[connection signal="body_entered" from="StompDetector" to="." method="_on_StompDetector_body_entered"]
[connection signal="area_entered" from="KillDetector" to="." method="_on_KillDetector_area_entered"]
[connection signal="body_entered" from="KillDetector" to="." method="_on_KillDetector_body_entered"]
[connection signal="area_entered" from="Body" to="." method="_on_Body_area_entered"]
